maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:19: error: ':' expected but ')' found.
def ouAvance(somAng):Int ={ 
                   ^Escaper:50: error: identifier expected but '}' found.
}
^